@@ -1,2 +1,0 @@
-FROM src
-INSERT OVERWRITE TABLE dest1 SELECT '1234', concat(src.key) WHERE src.key < 100 group by src.key
