@@ -1,0 +1,85 @@
+PREHOOK: query: CREATE TABLE dest1(key INT, value STRING) STORED AS TEXTFILE
+PREHOOK: type: CREATETABLE
+POSTHOOK: query: CREATE TABLE dest1(key INT, value STRING) STORED AS TEXTFILE
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Output: default@dest1
+PREHOOK: query: FROM src
+INSERT OVERWRITE TABLE dest1 SELECT '1234', concat(src.key) WHERE src.key < 100 group by src.key
+PREHOOK: type: QUERY
+PREHOOK: Input: default@src
+PREHOOK: Output: default@dest1
+POSTHOOK: query: FROM src
+INSERT OVERWRITE TABLE dest1 SELECT '1234', concat(src.key) WHERE src.key < 100 group by src.key
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@src
+POSTHOOK: Output: default@dest1
+PREHOOK: query: SELECT dest1.* FROM dest1
+PREHOOK: type: QUERY
+PREHOOK: Input: default@dest1
+PREHOOK: Output: file:/data/users/pyang/trunk/VENDOR.hive/trunk/build/ql/tmp/65445395/10000
+POSTHOOK: query: SELECT dest1.* FROM dest1
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@dest1
+POSTHOOK: Output: file:/data/users/pyang/trunk/VENDOR.hive/trunk/build/ql/tmp/65445395/10000
+1234	0
+1234	10
+1234	11
+1234	12
+1234	15
+1234	17
+1234	18
+1234	19
+1234	2
+1234	20
+1234	24
+1234	26
+1234	27
+1234	28
+1234	30
+1234	33
+1234	34
+1234	35
+1234	37
+1234	4
+1234	41
+1234	42
+1234	43
+1234	44
+1234	47
+1234	5
+1234	51
+1234	53
+1234	54
+1234	57
+1234	58
+1234	64
+1234	65
+1234	66
+1234	67
+1234	69
+1234	70
+1234	72
+1234	74
+1234	76
+1234	77
+1234	78
+1234	8
+1234	80
+1234	82
+1234	83
+1234	84
+1234	85
+1234	86
+1234	87
+1234	9
+1234	90
+1234	92
+1234	95
+1234	96
+1234	97
+1234	98
+PREHOOK: query: DROP TABLE dest1
+PREHOOK: type: DROPTABLE
+POSTHOOK: query: DROP TABLE dest1
+POSTHOOK: type: DROPTABLE
+POSTHOOK: Output: default@dest1
