@@ -1,2 +1,0 @@
-Semantic Exception: 
-line 2:36 Function Argument Type Mismatch concat: Looking for UDF "concat" with parameters [class org.apache.hadoop.io.Text, class org.apache.hadoop.io.Text, class org.apache.hadoop.io.Text]
